<resources>
    <string name="app_name">MyClientTrack</string>
    <string name="wellcome">¡Bienvenido/a!</string>
    <string name="msj_inicial">Para añadir un nuevo contacto
        presiona el símbolo (+)
        situado en la barra de menú.</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="name">Nombre</string>
    <string name="addr">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="email">e-mail</string>
    <string name="other">Otro</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="edit">Editar</string>
    <string name="titulo">Titulo Nota</string>
    <string name="blabla">Texto de la Nota</string>
    <string name="fecha">fecha</string>
    <string name="hora">hora</string>
    <string name="emptyNota">Aun no hay notas que mostrar. \n Pulsa el icono (+) en el menu para añadir una nota.</string>
    <string name="content_desc_happyFace">Imagen de cara sonrriente</string>
    <string name="content_desc_verNotas">Imagen de un folio escrito para visualizar las notras del cliente</string>
    <string name="content_desc_anadeNota">Imagen de un folio con simbolo de más para añadir una nota</string>
    <string name="content_desc_camera">camara de fotos</string>
    <string name="content_desc_galeria">Imagen para abrir la galeria de fotos</string>
    <string name="content_desc_editaCliente">Imagen de un boli, es boton para editar el cliente</string>
    <string name="back">Volver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>