<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cliente.NuevoClienteFragment"

    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="145dp"
        android:contentDescription="@string/content_desc_happyFace"
        android:src="@drawable/img_happy_face" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_nom"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eti_nom1"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_dir"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:text="@string/addr"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eti_dir1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addr"
                android:inputType="text"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_tel"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eti_tel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number|phone"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eti_email1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_otro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eti_otro1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/other"
                android:inputType="text"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_cancelar1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/cancel"
                />
            <Button
                android:id="@+id/btn_guardar1"
                android:layout_width="180dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:textColor="@color/white"
                android:text="@string/save_changes"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>