<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/contenedor_editClient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_edita_cliente"></androidx.fragment.app.FragmentContainerView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/contenedor_nuevaNota"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_nueva_nota"></androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:id="@+id/layout_contenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".cliente.NuevoClienteFragment"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="145dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/content_desc_happyFace"
            android:src="@drawable/img_happy_face" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_nom"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNom"
                    android:layout_width="283dp"
                    android:layout_height="48dp"
                    android:autofillHints="name"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_dir"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:text="@string/addr"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDir"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="postalAddress"
                    android:ems="10"
                    android:hint="@string/addr"
                    android:inputType="text"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_tel"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTel"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="phone"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number|phone"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="emailAddress"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_otro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOtro"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:autofillHints="other"
                    android:ems="10"
                    android:hint="@string/other"
                    android:inputType="text"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_volver"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/back"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_editar"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_shape"
                    android:onClick="editClient"
                    android:text="@string/edit"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/verNota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_verNotas"
                    android:onClick="verNotas"
                    app:srcCompat="@drawable/vernotas" />

                <ImageButton
                    android:id="@+id/addNota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_anadeNota"
                    android:onClick="addNota"
                    app:srcCompat="@drawable/addnota" />

                <ImageButton
                    android:id="@+id/galeria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_galeria"
                    android:onClick="openGallery"
                    app:srcCompat="@drawable/galeria" />

                <ImageButton
                    android:id="@+id/camara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_camera"
                    app:srcCompat="@drawable/camara" />

                <ImageButton
                    android:id="@+id/editar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_editaCliente"
                    android:onClick="editClient"
                    app:srcCompat="@drawable/editarcliente" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>