<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".notas.NuevaNotaFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/light_grey">

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:hint="@string/titulo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/cuerpoNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/blabla"
            android:inputType="textMultiLine"
            android:lineSpacingExtra="10dp"
            android:lines="10"
            android:maxLines="14"
            android:minLines="6"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:scrollbars="vertical"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/btn_guardaNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>